--- a/backend/pratise backend/practice project pin/pin/package.json
+++ b/backend/pratise backend/practice project pin/pin/package.json
@@ -10,6 +10,7 @@
     "debug": "~2.6.9",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
+    "express-flash": "^0.0.2",
     "express-session": "^1.18.0",
     "http-errors": "~1.6.3",
     "mongoose": "^8.2.2",
