--- a/reactjs/react practise/postFullStack project/frontend/package.json
+++ b/reactjs/react practise/postFullStack project/frontend/package.json
@@ -19,6 +19,7 @@
     "react-hook-form": "^7.51.5",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "react-share": "^5.1.0",
     "use-history": "^1.4.1"
   },
   "devDependencies": {
