--- a/reactjs/react practise/postFullStack project/backend/package.json
+++ b/reactjs/react practise/postFullStack project/backend/package.json
@@ -22,6 +22,7 @@
     "mongoose-aggregate-paginate-v2": "^1.0.7",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.3",
-    "prettier": "^3.3.1"
+    "prettier": "^3.3.1",
+    "socket.io": "^4.7.5"
   }
 }
