--- a/reactjs/react practise/postFullStack project/frontend/package.json
+++ b/reactjs/react practise/postFullStack project/frontend/package.json
@@ -14,6 +14,8 @@
     "axios": "^1.7.2",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "flickity": "^3.0.0",
+    "gsap": "^3.12.5",
     "html-react-parser": "^5.1.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
