--- a/reactjs/react practise/postFullStack project/frontend/package.json
+++ b/reactjs/react practise/postFullStack project/frontend/package.json
@@ -15,6 +15,7 @@
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "flickity": "^3.0.0",
+    "framer-motion": "^11.5.4",
     "gsap": "^3.12.5",
     "html-react-parser": "^5.1.10",
     "react": "^18.2.0",
@@ -23,6 +24,7 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-share": "^5.1.0",
+    "react-transition-group": "^4.4.5",
     "socket.io-client": "^4.7.5",
     "use-history": "^1.4.1"
   },
