--- a/reactjs/react practise/postFullStack project/frontend/package.json
+++ b/reactjs/react practise/postFullStack project/frontend/package.json
@@ -18,6 +18,7 @@
     "framer-motion": "^11.5.4",
     "gsap": "^3.12.5",
     "html-react-parser": "^5.1.10",
+    "locomotive-scroll": "^4.1.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
