--- a/reactjs/react practise/postFullStack project/frontend/package.json
+++ b/reactjs/react practise/postFullStack project/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.5",
+    "@studio-freight/react-lenis": "^0.0.47",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
@@ -24,6 +25,7 @@
     "react-hook-form": "^7.51.5",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
+    "react-scroll": "^1.9.0",
     "react-share": "^5.1.0",
     "react-transition-group": "^4.4.5",
     "socket.io-client": "^4.7.5",
