--- a/backend/payment/payment/package.json
+++ b/backend/payment/payment/package.json
@@ -1,25 +1,21 @@
 {
-  "name": "pin",
+  "name": "payment",
   "version": "0.0.0",
   "private": true,
   "scripts": {
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "axios": "^1.7.7",
+    "body-parser": "^1.20.3",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
     "ejs": "~2.6.1",
     "express": "~4.16.1",
-    "express-flash": "^0.0.2",
-    "express-session": "^1.18.0",
     "http-errors": "~1.6.3",
-    "mongoose": "^8.2.2",
+    "mongoose": "^8.6.3",
     "morgan": "~1.9.1",
-    "passport": "^0.7.0",
-    "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^8.0.0",
-    "razorpay": "^2.9.4"
+    "nodemon": "^3.1.7",
+    "stripe": "^16.12.0"
   }
 }
