--- a/backend/pratise backend/practice project pin/pin/package.json
+++ b/backend/pratise backend/practice project pin/pin/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "compression": "^1.7.5",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.4.5",
