--- a/reactjs/react practise/postFullStack project/backend/package.json
+++ b/reactjs/react practise/postFullStack project/backend/package.json
@@ -17,10 +17,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "global": "^4.4.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.1",
     "mongoose-aggregate-paginate-v2": "^1.0.7",
     "multer": "^1.4.5-lts.1",
+    "node-polyfill-webpack-plugin": "^4.1.0",
     "nodemon": "^3.1.3",
     "prettier": "^3.3.1",
     "socket.io": "^4.7.5"
