--- a/reactjs/react practise/postFullStack project/frontend/package.json
+++ b/reactjs/react practise/postFullStack project/frontend/package.json
@@ -13,23 +13,30 @@
     "@reduxjs/toolkit": "^2.2.5",
     "@studio-freight/react-lenis": "^0.0.47",
     "axios": "^1.7.2",
+    "buffer": "^6.0.3",
     "cors": "^2.8.5",
     "date-fns": "^3.6.0",
     "flickity": "^3.0.0",
     "framer-motion": "^11.5.4",
+    "global": "^4.4.0",
     "gsap": "^3.12.5",
     "html-react-parser": "^5.1.10",
     "locomotive-scroll": "^4.1.4",
+    "process": "^0.11.10",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.5",
+    "react-peer": "^0.2.6",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scroll": "^1.9.0",
     "react-share": "^5.1.0",
     "react-transition-group": "^4.4.5",
+    "simple-peer": "^9.11.1",
     "socket.io-client": "^4.7.5",
-    "use-history": "^1.4.1"
+    "stream-browserify": "^3.0.0",
+    "use-history": "^1.4.1",
+    "webrtc-adapter": "^9.0.1"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
