--- a/reactjs/react practise/postFullStack project/backend/package.json
+++ b/reactjs/react practise/postFullStack project/backend/package.json
@@ -25,6 +25,7 @@
     "node-polyfill-webpack-plugin": "^4.1.0",
     "nodemon": "^3.1.3",
     "prettier": "^3.3.1",
+    "readable-stream": "^4.5.2",
     "socket.io": "^4.7.5"
   }
 }
