--- a/reactjs/react practise/ReactProject2/frontend/package.json
+++ b/reactjs/react practise/ReactProject2/frontend/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "swiper": "^7.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
