--- a/reactjs/SevenReactjs/Projects/PetsAdoption/package.json
+++ b/reactjs/SevenReactjs/Projects/PetsAdoption/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.8",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3"
   },
   "devDependencies": {
