--- a/reactjs/SevenReactjs/Projects/PetsAdoption/package.json
+++ b/reactjs/SevenReactjs/Projects/PetsAdoption/package.json
@@ -12,9 +12,13 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.5.1",
     "axios": "^1.7.9",
+    "chart.js": "^4.4.7",
+    "plotly.js": "^3.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.8",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
+    "react-plotly.js": "^2.6.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.3"
   },
