--- a/reactjs/SevenReactjs/Projects/PetsAdoption/package.json
+++ b/reactjs/SevenReactjs/Projects/PetsAdoption/package.json
@@ -16,6 +16,7 @@
     "plotly.js": "^3.0.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.8",
+    "react-calendar": "^5.1.0",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-plotly.js": "^2.6.0",
