--- a/reactjs/SevenReactjs/RevisionReactjs/BasicOfReact/package.json
+++ b/reactjs/SevenReactjs/RevisionReactjs/BasicOfReact/package.json
@@ -13,7 +13,8 @@
     "axios": "^1.8.4",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-hook-form": "^7.56.1"
+    "react-hook-form": "^7.56.1",
+    "react-router-dom": "^7.6.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
