--- a/youtube/React/FirstVideo/firstreactapp/package.json
+++ b/youtube/React/FirstVideo/firstreactapp/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.11.2",
     "axios": "^1.13.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.6"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.9.6",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
